force-app/main/default/objects/RoomBooking__c/RoomBooking__c.object-meta.xml
<CustomObject>
    <label>RoomBooking</label>
    <nameField>
        <label>BookedBy</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RoomBookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>