force-app/main/default/objects/RoomBooking__c/fields/available__c.field-meta.xml
<CustomField>
    <fullName>available__c</fullName>
    <defaultValue>&quot;Y&quot;</defaultValue>
    <inlineHelpText>是否预定成功</inlineHelpText>
    <label>available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>