force-app/main/default/objects/RoomBooking__c/fields/MeetingRoom__c.field-meta.xml
<CustomField>
    <fullName>MeetingRoom__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MeetingRoom</label>
    <referenceTo>MeetingRoom__c</referenceTo>
    <relationshipLabel>RoomBookings</relationshipLabel>
    <relationshipName>RoomBookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>