force-app/main/default/objects/RoomBooking__c/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <formula>TEXT($User.TimeZoneSidKey)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimeZone</label>
    <type>Text</type>
</CustomField>