force-app/main/default/objects/RoomBooking__c/validationRules/Lasting90.validationRule-meta.xml
<ValidationRule>
    <fullName>Lasting90</fullName>
    <active>true</active>
    <errorConditionFormula>(EndTime__c  -  StartTime__c)*24&gt; 1.5</errorConditionFormula>
    <errorMessage>Meeting could not  last  greater  than 1.5 hour</errorMessage>
</ValidationRule>