force-app/main/default/objects/RoomBooking__c/validationRules/StartTimeCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>StartTimeCheck</fullName>
    <active>true</active>
    <errorConditionFormula>StartTime__c &gt; EndTime__c</errorConditionFormula>
    <errorMessage>StartTime Must less than Endtime</errorMessage>
</ValidationRule>