force-app/main/default/objects/RoomBooking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>StartTime__c</columns>
    <columns>EndTime__c</columns>
    <columns>MeetingRoom__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>1/1/2024 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>