force-app/main/default/objects/RoomBooking__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>MeetingRoom__c</columns>
    <columns>available__c</columns>
    <columns>Subject__c</columns>
    <columns>StartTime__c</columns>
    <columns>EndTime__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/29/2024 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>